@@ -1,8 +1,8 @@
-config NETFILTER_XT_DHCPADDR
-	tristate '"DHCPADDR" DHCP address matching and manipulation support'
+config NETFILTER_XT_DHCPMAC
+	tristate '"DHCPMAC" DHCP address matching and manipulation support'
 	depends on NETFILTER_XTABLES
 	depends on IP_NF_MANGLE || IP6_NF_MANGLE
 	---help---
-	The DHCPADDR extensions allows to match and change the MAC address in
+	The DHCPMAC extensions allows to match and change the MAC address in
 	a DHCP packet, so as to work around VMware's "inability" to use MAC
 	addresses from a vendor different than VMware at boot time.
